--- a/app/src/main/res/layout/move_list.xml
+++ b/app/src/main/res/layout/move_list.xml
@@ -6,14 +6,29 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-
-    <ImageView
-        android:id="@+id/timeIcon"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/vertical_line1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/time_24"
-        app:layout_constraintStart_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="parent"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".20"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/vertical_line2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".50"
+        />
+
+    <ImageView
+        android:id="@+id/simbolIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/add_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         />
 
     <TextView
@@ -21,26 +36,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:text="5"
-        app:layout_constraintStart_toEndOf="@+id/timeIcon"
-        app:layout_constraintTop_toBottomOf="@+id/recipeNameLa"
+        android:text="500000"
+        android:layout_marginLeft="5dp"
+        app:layout_constraintStart_toEndOf="@+id/simbolIcon"
+        app:layout_constraintTop_toTopOf="@+id/simbolIcon"
         />
 
     <TextView
-        android:id="@+id/plusSymbol"
+        android:id="@+id/cantidad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=" + "
-        app:layout_constraintStart_toEndOf="@+id/prepTimeMin"
-        app:layout_constraintTop_toBottomOf="@+id/recipeNameLa"
+        android:text="5000000"
+        app:layout_constraintStart_toEndOf="@+id/vertical_line1"
+        app:layout_constraintEnd_toEndOf="@+id/vertical_line2"
+        app:layout_constraintTop_toTopOf="@+id/simbolIcon"
         />
 
     <TextView
-        android:id="@+id/reCookTime"
+        android:id="@+id/fecha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@+id/plusSymbol"
-        app:layout_constraintTop_toBottomOf="@+id/recipeNameLa"
+        android:text="500"
+        android:layout_marginLeft="5dp"
+        app:layout_constraintStart_toEndOf="@+id/vertical_line2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/simbolIcon"
         />
 
 
